FELIX-5892 : Repeated calls to getFactoryConfiguration return different configuration instances. Apply patch from Tim Ward
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1836873 13f79535-47bb-0310-9956-ffa450edef68